--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
   <h3>**Background and Education**</h3>
 
-  <p>I'm 47, I live in Florida and I'm attending JTC at Columbia.</p>
+  <p>I'm 47, I live in Florida and I'm attending JTC at Columbia Online.</p>
 
 
 
